@@ -19,13 +19,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <reststop.version>3.0</reststop.version>
+        <reststop.version>3.7-SNAPSHOT</reststop.version>
         <slf4j-api.version>1.7.25</slf4j-api.version>
-        <logback.version>1.1.8</logback.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <logback.version>1.2.3</logback.version>
+        <javax.servlet-api.version>4.0.0</javax.servlet-api.version>
+        <!--<javax.servlet-api.version>4.0.0</javax.servlet-api.version>-->
         <metrics.version>3.0.2</metrics.version>
-        <junit-jupiter.version>5.0.1</junit-jupiter.version>
-        <junit-platform.version>1.0.1</junit-platform.version>
+        <junit-jupiter.version>5.1.0</junit-jupiter.version>
+        <junit-platform.version>1.1.0</junit-platform.version>
+
     </properties>
 
     <modules>
@@ -134,26 +136,31 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.9</source>
+                    <target>1.9</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.ws.annotation</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.1</version>
+                        <version>${junit-platform.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.0.1</version>
+                        <version>${junit-jupiter.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
